Update configuration and fix links in About page for improved navigation

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,25 +17,25 @@
         <div class="progress" style="width: 0%;"></div>
 
         <header>
-			<div class="header-container">
-				<a class="homepage-link" href="/" title="Homepage">
-                    <img src="../assets/Images/mylogo.png" class="logo-icon">
+            <div class="header-container">
+                <a class="homepage-link" href="/" title="Homepage">
+                    <img src="assets/Images/mylogo.png" class="logo-icon">
                 </a>
                 
-				<div class="divider"></div>
-	
+                <div class="divider"></div>
+    
                 <nav class="navbar-container">
                     <div class="navbar-links-container">
-                        <a href="" class="navbar-link">
+                        <a href="/" class="navbar-link">
                             Work&nbsp;<span class="navbar-separator">/</span>
                         </a>
                         <a href="/pages/about" class="navbar-link">About</a>
-                        <a href="/pages/contact.html" class="navbar-link">Contact</a>
+                        <a href="/pages/contact" class="navbar-link">Contact</a>
                         <a id="more-button" href="#" class="navbar-more">•••</a>
                     </div>
                 </nav>  
-			</div>
-		</header>
+            </div>
+        </header>
 
         <!-- More Menu Button -->
         <div class="container">
@@ -43,11 +43,11 @@
             <div class="new-nav-container">
                 <nav class="navigation">
                     <div class="navigation-links">
-                        <a href="../pages/achievements.html">Certification</a>
-                        <a href="../pages/course.html">Lesson</a>
-                        <a href="../pages/reading.html">Reading</a>
-                        <a href="../pages/notes.html">Notes</a>
-                        <a href="../pages/now.html">Now</a>
+                        <a href="/pages/achievements">Certification</a>
+                        <a href="/pages/course">Lesson</a>
+                        <a href="/pages/reading">Reading</a>
+                        <a href="/pages/notes">Notes</a>
+                        <a href="/pages/now">Now</a>
                     </div>
                 </nav>
             </div>
@@ -62,16 +62,16 @@
             <div class="footer-container">
                 <div class="footer-card">
                     <a class="link-dif" href="/">Work&nbsp;<span>/</span></a>
-                    <a href="../pages/about.html">About</a>
-                    <a href="../pages/contact.html">Contact</a>
+                    <a href="/pages/about">About</a>
+                    <a href="/pages/contact">Contact</a>
                 </div>
 
                 <div class="footer-container2">
-                    <a  href="../pages/achievements.html">Certification</a>
-                    <a  href="../pages/course.html">Lesson</a>
-                    <a  href="../pages/notes.html">Notes</a>
-                    <a  href="../pages/reading.html">Reading</a>
-                    <a  href="../pages/now.html">Now</a>
+                    <a  href="/pages/achievements">Certification</a>
+                    <a  href="/pages/course">Lesson</a>
+                    <a  href="/pages/notes">Notes</a>
+                    <a  href="/pages/reading">Reading</a>
+                    <a  href="/pages/now">Now</a>
                 </div>
             </div>
 
@@ -104,7 +104,7 @@
                         <path d="M25.856 25.8613H21.7085V19.3635C21.7085 17.813 21.677 15.8197 19.549 15.8197C17.3877 15.8197 17.057 17.5068 17.057 19.2498V25.8613H12.9095V12.5H16.8925V14.32H16.945C17.5015 13.27 18.856 12.1623 20.8772 12.1623C25.0772 12.1623 25.856 14.9273 25.856 18.527V25.856V25.8613ZM8.2265 10.6712C6.893 10.6712 5.8185 9.5915 5.8185 8.2615C5.8185 6.935 6.893 5.85525 8.2265 5.85525C9.5565 5.85525 10.6345 6.935 10.6345 8.2615C10.6345 9.5915 9.55475 10.6712 8.2265 10.6712ZM10.3055 25.8613H6.1475V12.5H10.3055V25.8613ZM27.928 2H4.065C2.924 2 2 2.903 2 4.01775V27.9823C2 29.097 2.924 30 4.065 30H27.9262C29.0672 30 30 29.097 30 27.9823V4.01775C30 2.903 29.0672 2 27.9262 2H27.928Z"/></svg>
                     </a>
 
-                    <a href="https://github.com/pinkythefuturecomputer"
+                    <a href="https://github.com/mspinkymonterde"
                         title="GitHub" target="_blank">
                         <svg class="github"width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
                         <path d="M16.0001 1C7.16463 1 0 8.08236 0 16.8192C0 23.8085 4.5845 29.7382 10.9419 31.8299C11.7415 31.9764 12.0351 31.4867 12.0351 31.0689C12.0351 30.6917 12.0201 29.4456 12.0134 28.1238C7.56213 29.0806 6.62288 26.2573 6.62288 26.2573C5.895 24.4289 4.84625 23.9425 4.84625 23.9425C3.39463 22.9608 4.95575 22.981 4.95575 22.981C6.56237 23.0925 7.40837 24.6111 7.40837 24.6111C8.8355 27.0295 11.1515 26.3304 12.0645 25.9261C12.2081 24.9038 12.6227 24.2058 13.0804 23.8108C9.5265 23.4109 5.79063 22.0544 5.79063 15.993C5.79063 14.2659 6.41563 12.8546 7.43913 11.7468C7.273 11.3484 6.72537 9.73952 7.59412 7.56045C7.59412 7.56045 8.93775 7.13531 11.9954 9.18203C13.2716 8.83153 14.6404 8.65579 16.0001 8.64974C17.3599 8.65579 18.7298 8.83141 20.0084 9.18203C23.0623 7.13544 24.404 7.56057 24.404 7.56057C25.2749 9.7394 24.727 11.3485 24.5609 11.7468C25.5867 12.8546 26.2075 14.2659 26.2075 15.993C26.2075 22.0689 22.4645 23.4067 18.9016 23.7983C19.4755 24.2892 19.9869 25.2519 19.9869 26.7278C19.9869 28.8443 19.9684 30.5479 19.9684 31.0689C19.9684 31.49 20.2564 31.9832 21.0674 31.8277C27.4213 29.7338 32 23.8062 32 16.8193C32 8.08235 24.8364 1 16.0001 1ZM5.99263 23.5347C5.95738 23.6133 5.83225 23.6369 5.71838 23.5829C5.60225 23.5314 5.53713 23.4242 5.57463 23.3454C5.60913 23.2644 5.7345 23.2418 5.85025 23.2961C5.9665 23.3477 6.03275 23.4559 5.99263 23.5347ZM6.77962 24.229C6.70337 24.299 6.55413 24.2665 6.45288 24.156C6.34825 24.0457 6.32863 23.8982 6.406 23.8272C6.48475 23.7573 6.62938 23.79 6.73425 23.9003C6.839 24.0119 6.85925 24.1583 6.77962 24.229ZM7.31962 25.1174C7.2215 25.1847 7.06125 25.1216 6.96212 24.9809C6.86412 24.8403 6.86413 24.6716 6.96425 24.604C7.06363 24.5364 7.2215 24.5972 7.32188 24.7368C7.41963 24.8798 7.41962 25.0485 7.3195 25.1175L7.31962 25.1174ZM8.23263 26.1462C8.145 26.2419 7.95812 26.2162 7.82137 26.0857C7.6815 25.9581 7.64263 25.7772 7.73063 25.6815C7.81938 25.5856 8.00725 25.6126 8.145 25.7421C8.28375 25.8694 8.32625 26.0517 8.23263 26.1462ZM9.41288 26.4935C9.37413 26.6174 9.19412 26.6738 9.013 26.6212C8.832 26.5669 8.71362 26.4218 8.75012 26.2966C8.78775 26.1718 8.9685 26.1132 9.151 26.1696C9.33175 26.2235 9.4505 26.3674 9.41288 26.4935ZM10.7559 26.6409C10.7604 26.7713 10.6068 26.8794 10.4165 26.8819C10.2253 26.8861 10.0704 26.7806 10.0682 26.652C10.0682 26.5204 10.2185 26.4133 10.4099 26.4101C10.6001 26.4064 10.7559 26.5112 10.7559 26.6409ZM12.0752 26.5909C12.098 26.7182 11.9659 26.8489 11.7769 26.8838C11.5912 26.9173 11.4193 26.8387 11.3956 26.7125C11.3726 26.582 11.5073 26.4512 11.6926 26.4175C11.8819 26.385 12.0511 26.4615 12.0752 26.5909Z"/> </svg>
