Refactor styles and update links for About and Contact pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header>
             <div class="header-container">
-                <a class="homepage-link" href="/" title="Homepage">
+                <a class="homepage-link" href="/pinky-monterde" title="Homepage">
                     <img src="assets/Images/mylogo.png" class="logo-icon">
                 </a>
                 
@@ -25,7 +25,7 @@
     
                 <nav class="navbar-container">
                     <div class="navbar-links-container">
-                        <a href="/" class="navbar-link">
+                        <a href="/pinky-monterde" class="navbar-link">
                             Work&nbsp;<span class="navbar-separator">/</span>
                         </a>
                         <a href="/pages/about" class="navbar-link">About</a>
@@ -322,7 +322,7 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-card">
-                    <a class="link-dif" href="/">Work&nbsp;<span>/</span></a>
+                    <a class="link-dif" href="/pinky-monterde">Work&nbsp;<span>/</span></a>
                     <a href="/pages/about">About</a>
                     <a href="/pages/contact">Contact</a>
                 </div>
