Update baseurl and fix navigation links for consistency across pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,7 @@
         <header>
             <div class="header-container">
                 <a class="homepage-link" href="/pinky-monterde" title="Homepage">
-                    <img src="../assets/Images/mylogo.png" class="logo-icon">
+                    <img src="assets/Images/mylogo.png" class="logo-icon">
                 </a>
                 
                 <div class="divider"></div>
@@ -29,8 +29,8 @@
                         <a href="/pinky-monterde" class="navbar-link">
                             Work&nbsp;<span class="navbar-separator">/</span>
                         </a>
-                        <a href="/pages/about" class="navbar-link">About</a>
-                        <a href="/pages/contact" class="navbar-link">Contact</a>
+                        <a href="/pinky-monterde/pages/about" class="navbar-link">About</a>
+                        <a href="/pinky-monterde/pages/contact" class="navbar-link">Contact</a>
                         <a id="more-button" href="#" class="navbar-more">•••</a>
                     </div>
                 </nav>  
@@ -43,11 +43,11 @@
             <div class="new-nav-container">
                 <nav class="navigation">
                     <div class="navigation-links">
-                        <a href="/pages/achievements">Certification</a>
-                        <a href="/pages/course">Lesson</a>
-                        <a href="/pages/reading">Reading</a>
-                        <a href="/pages/notes">Notes</a>
-                        <a href="/pages/now">Now</a>
+                        <a href="/pinky-monterde/pages/achievements">Certification</a>
+                        <a href="/pinky-monterde/pages/course">Lesson</a>
+                        <a href="/pinky-monterde/pages/reading">Reading</a>
+                        <a href="/pinky-monterde/pages/notes">Notes</a>
+                        <a href="/pinky-monterde/pages/now">Now</a>
                     </div>
                 </nav>
             </div>
@@ -96,16 +96,16 @@
             <div class="footer-container">
                 <div class="footer-card">
                     <a class="link-dif" href="/pinky-monterde">Work&nbsp;<span>/</span></a>
-                    <a href="/pages/about">About</a>
+                    <a href="/pinky-monterde/pages/about">About</a>
                     <a href="/pages/contact">Contact</a>
                 </div>
 
                 <div class="footer-container2">
-                    <a  href="/pages/achievements">Certification</a>
-                    <a  href="/pages/course">Lesson</a>
-                    <a  href="/pages/notes">Notes</a>
-                    <a  href="/pages/reading">Reading</a>
-                    <a  href="/pages/now">Now</a>
+                    <a  href="/pinky-monterde/pages/achievements">Certification</a>
+                    <a  href="/pinky-monterde/pages/course">Lesson</a>
+                    <a  href="/pinky-monterde/pages/notes">Notes</a>
+                    <a  href="/pinky-monterde/pages/reading">Reading</a>
+                    <a  href="/pinky-monterde/pages/now">Now</a>
                 </div>
             </div>
 
