--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         <a href="/pinky-monterde" class="navbar-link">
                             Work&nbsp;<span class="navbar-separator">/</span>
                         </a>
-                        <a href="/pages/about" class="navbar-link">About</a>
-                        <a href="/pages/contact" class="navbar-link">Contact</a>
+                        <a href="/pinky-monterde/pages/about" class="navbar-link">About</a>
+                        <a href="/pinky-monterde/pages/contact" class="navbar-link">Contact</a>
                         <a id="more-button" href="#" class="navbar-more">•••</a>
                     </div>
                 </nav>  
@@ -42,11 +42,11 @@
             <div class="new-nav-container">
                 <nav class="navigation">
                     <div class="navigation-links">
-                        <a href="/pages/achievements">Certification</a>
-                        <a href="/pages/course">Lesson</a>
-                        <a href="/pages/reading">Reading</a>
-                        <a href="/pages/notes">Notes</a>
-                        <a href="/pages/now">Now</a>
+                        <a href="/pinky-monterde/pages/achievements">Certification</a>
+                        <a href="/pinky-monterde/pages/course">Lesson</a>
+                        <a href="/pinky-monterde/pages/reading">Reading</a>
+                        <a href="/pinky-monterde/pages/notes">Notes</a>
+                        <a href="/pinky-monterde/pages/now">Now</a>
                     </div>
                 </nav>
             </div>
@@ -62,7 +62,7 @@
                     
                 
                     <div class="profile-container">
-                        <a class="profile-link" href="/pages/about">
+                        <a class="profile-link" href="/pinky-monterde/pages/about">
                         <img src="assets\Images\profile.png" alt="About Pinky">
                         </a>
 
@@ -256,7 +256,7 @@
                 </div>  
 
                 <div class="more-grid">
-                    <a href="/pages/about" class="link" style="text-decoration: none;">
+                    <a href="/pinky-monterde/pages/about" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
                               <h3>About me</h3>
@@ -266,7 +266,7 @@
                         </div>
                     </a>
 
-                    <a href="/pages/now" class="link" style="text-decoration: none;">
+                    <a href="/pinky-monterde/pages/now" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
                               <h3>Now</h3>
@@ -276,7 +276,7 @@
                         </div>
                     </a>
 
-                    <a href="/pages/course" class="link" style="text-decoration: none;">
+                    <a href="/pinky-monterde/pages/course" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
                               <h3>Lessons</h3>
@@ -286,7 +286,7 @@
                         </div>
                     </a>
 
-                    <a href="/pages/reading" class="link" style="text-decoration: none;">
+                    <a href="/pinky-monterde/pages/reading" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
                               <h3>Bookshelf</h3>
@@ -296,7 +296,7 @@
                         </div>
                     </a>
 
-                    <a href="/pages/notes" class="link" style="text-decoration: none;">
+                    <a href="/pinky-monterde/pages/notes" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
                               <h3>Journal</h3>
@@ -323,16 +323,16 @@
             <div class="footer-container">
                 <div class="footer-card">
                     <a class="link-dif" href="/pinky-monterde">Work&nbsp;<span>/</span></a>
-                    <a href="/pages/about">About</a>
+                    <a href="/pinky-monterde/pages/about">About</a>
                     <a href="/pages/contact">Contact</a>
                 </div>
 
                 <div class="footer-container2">
-                    <a  href="/pages/achievements">Certification</a>
-                    <a  href="/pages/course">Lesson</a>
-                    <a  href="/pages/notes">Notes</a>
-                    <a  href="/pages/reading">Reading</a>
-                    <a  href="/pages/now">Now</a>
+                    <a  href="/pinky-monterde/pages/achievements">Certification</a>
+                    <a  href="/pinky-monterde/pages/course">Lesson</a>
+                    <a  href="/pinky-monterde/pages/notes">Notes</a>
+                    <a  href="/pinky-monterde/pages/reading">Reading</a>
+                    <a  href="/pinky-monterde/pages/now">Now</a>
                 </div>
             </div>
 
