Remove 'Lesson' link from navigation across multiple pages for improved consistency

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             <div class="new-nav-container">
                 <nav class="navigation">
                     <div class="navigation-links">
-                        <a href="/pages/achievements">Certification</a>
-                        <a href="/pages/course">Lesson</a>
+                        <a href="/pages/achievements">Achievements</a>
                         <a href="/pages/reading">Reading</a>
                         <a href="/pages/notes">Notes</a>
                         <a href="/pages/now">Now</a>
@@ -55,7 +54,6 @@
         </div>
 
         <main id="main">
-            
             <section class="container">
                 <div class="intro-container">
                     <p class="intro-p">Hello～ My name’s Pinky. I’m a…</p>
@@ -327,10 +325,8 @@
                     <a href="/pages/about">About</a>
                     <a href="/pages/contact">Contact</a>
                 </div>
-
                 <div class="footer-container2">
                     <a  href="/pages/achievements">Certification</a>
-                    <a  href="/pages/course">Lesson</a>
                     <a  href="/pages/notes">Notes</a>
                     <a  href="/pages/reading">Reading</a>
                     <a  href="/pages/now">Now</a>
