--- a/pages/notes.html
+++ b/pages/notes.html
@@ -41,19 +41,18 @@
 
         <!-- More Menu Button -->
         <div class="container">
-        <div id="open-menu" class="open-menu" aria-hidden="true">
-            <div class="new-nav-container">
-                <nav class="navigation">
-                    <div class="navigation-links">
-                        <a href="/pages/achievements">Certification</a>
-                        <a href="/pages/course">Lesson</a>
-                        <a href="/pages/reading">Reading</a>
-                        <a href="/pages/notes">Notes</a>
-                        <a href="/pages/now">Now</a>
-                    </div>
-                </nav>
+            <div id="open-menu" class="open-menu" aria-hidden="true">
+                <div class="new-nav-container">
+                    <nav class="navigation">
+                        <div class="navigation-links">
+                            <a href="/pages/achievements">Certification</a>
+                            <a href="/pages/reading">Reading</a>
+                            <a href="/pages/notes">Notes</a>
+                            <a href="/pages/now">Now</a>
+                        </div>
+                    </nav>
+                </div>
             </div>
-        </div>
         </div>
 
         <main id="notes">
@@ -61,9 +60,8 @@
                 <div class="r-text">
                     <h1>Notes</h1>
                     <div class="where-card">
-                        <a href="https://www.flaticon.com/free-stickers/skill" title="Skill stickers created by paulalee - Flaticon">
-                        <img src="/assets/Images/stickerpack/note.png" alt=""></a>
-                        <p>A curated space for thoughts, ideas, and insights—whether it's brainstorming, reflecting, or jotting down key takeaways from my journey.</p>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" fill="rgba(240,187,64,1)"><path d="M9.24264 18.9967H21V20.9967H3V16.754L12.8995 6.85453L17.1421 11.0972L9.24264 18.9967ZM14.3137 5.44032L16.435 3.319C16.8256 2.92848 17.4587 2.92848 17.8492 3.319L20.6777 6.14743C21.0682 6.53795 21.0682 7.17112 20.6777 7.56164L18.5563 9.68296L14.3137 5.44032Z"></path></svg>
+                        <p>A space for thoughts, ideas, and insights—whether it's brainstorming, reflecting, or jotting down key takeaways from my journey.</p>
                     </div>
                 </div>
             </div>
@@ -88,7 +86,6 @@
 
                 <div class="footer-container2">
                     <a  href="/pages/achievements">Certification</a>
-                    <a  href="/pages/course">Lesson</a>
                     <a  href="/pages/notes">Notes</a>
                     <a  href="/pages/reading">Reading</a>
                     <a  href="/pages/now">Now</a>
