--- a/pages/reading.html
+++ b/pages/reading.html
@@ -45,7 +45,6 @@
                     <nav class="navigation">
                         <div class="navigation-links">
                             <a href="/pages/achievements">Certification</a>
-                            <a href="/pages/course">Lesson</a>
                             <a href="/pages/reading">Reading</a>
                             <a href="/pages/notes">Notes</a>
                             <a href="/pages/now">Now</a>
@@ -60,8 +59,7 @@
                 <div class="r-text">
                     <h1>My Bookshelf</h1>
                     <div class="where-card">
-                        <a href="https://www.flaticon.com/free-stickers/rest" title="rest stickers">
-                        <img src="/assets/Images/stickerpack/read.png" alt=""></a>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="36" height="36" fill="rgba(240,187,64,1)"><path d="M21 18H6C5.44772 18 5 18.4477 5 19C5 19.5523 5.44772 20 6 20H21V22H6C4.34315 22 3 20.6569 3 19V4C3 2.89543 3.89543 2 5 2H21V18ZM16 9V7H8V9H16Z"></path></svg>
                         <p>This page is where I track the personal development, interest, and study books I've read, curated to reflect my growth and learning journey.</p>
                     </div>
                 </div>
@@ -327,7 +325,6 @@
 
                 <div class="footer-container2">
                     <a  href="/pages/achievements">Certification</a>
-                    <a  href="/pages/course">Lesson</a>
                     <a  href="/pages/notes">Notes</a>
                     <a  href="/pages/reading">Reading</a>
                     <a  href="/pages/now">Now</a>
