--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             <section id="work" class="container">
                 <div class="work-container">
-                  <h2 class="work-h2">Select Work</h2>
+                  <h2 class="work-h2">Select Works</h2>
                   <div class="divider"></div>
                 </div>  
 
