--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <main id="main">
             <section class="container">
                 <div class="intro-container">
-                    <p class="intro-p">Hello～ My name’s Pinky. I’m a… lol</p>
+                    <p class="intro-p">Hello～ My name’s Pinky. I’m a…</p>
                     <h1 class="intro-h1">Software developer with Design Expertise.</h1>
                     
                 
