--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     </head>
 
     <body>
+
+        <div class="loader" style="width: 0%;"></div>
         <div class="progress" style="width: 0%;"></div>
 
         <header>
