--- a/pages/notes.html
+++ b/pages/notes.html
@@ -15,6 +15,7 @@
     </head>
 
     <body>
+        <div class="loader" style="width: 0%;"></div>
         <div class="progress" style="width: 0%;"></div>
 
         <header>
