--- a/pages/now.html
+++ b/pages/now.html
@@ -14,6 +14,7 @@
     </head>
 
     <body>
+        <div class="loader" style="width: 0%;"></div>
         <div class="progress" style="width: 0%;"></div>
 
         <header>
