--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <!-- INTRODUCTION -->
             <section class="container">
                 <div class="intro-container">
-                    <p class="intro-p">Hello～ My name’s PinkyCute. I’m a…</p>
+                    <p class="intro-p">Hello～ My name’s Pinky. I’m a…</p>
                     <h1 class="intro-h1">Software developer with Design Expertise.</h1>
                     
                 
