--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="loader" style="width: 0%;"></div>
         <div class="progress" style="width: 0%;"></div>
 
-               <!-- NAVBAR -->
+            <!-- NAVBAR -->
             <header>
                 <div class="header-container">
                     <a class="homepage-link" href="/" title="Homepage">
@@ -246,21 +246,21 @@
                         </div>
                     </a>
 
-                    <a href="/pages/now" class="link" style="text-decoration: none;">
+                    <a href="/pages/achievements" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
-                              <h3>Now</h3>
-                              <div>What I'm doing now</div>
+                              <h3>Achievements</h3>
+                              <div>What I achieved so far</div>
                             </div>
                             <img src="https://placehold.co/300x200" alt="">
                         </div>
                     </a>
 
-                    <a href="/pages/course" class="link" style="text-decoration: none;">
+                    <a href="/pages/now" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
-                              <h3>Lessons</h3>
-                              <div>What I'm studying</div>
+                              <h3>Now</h3>
+                              <div>What I'm doing now</div>
                             </div>
                             <img src="https://placehold.co/300x200" alt="">
                         </div>
