update the navbar and footer in pages

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="navbar-links-container">
                         <ul class="nav__list">
                             <li class="nav__item">
-                               <a href="/" class="nav__link">
+                               <a href="/" class="nav__link active">
                                   <i class="ri-arrow-right-up-line"></i>
                                   <span>Projects</span>
                                </a>
@@ -59,7 +59,7 @@
             <!-- INTRODUCTION -->
             <section class="container">
                 <div class="intro-container">
-                    <p class="intro-p">Hello～ My name’s PinkyCute. I’m a…</p>
+                    <p class="intro-p">Hello～ My name’s Pinky. I’m a…</p>
                     <h1 class="intro-h1">Software developer with Design Expertise.</h1>
                     
                 
@@ -305,12 +305,12 @@
             <!-- SHORTCUT NAV -->
             <div class="footer-container">
                 <div class="footer-card">
-                    <a class="link-dif" href="/">Work&nbsp;<span>/</span></a>
-                    <a href="/pages/about">About</a>
-                    <a href="/pages/contact">Contact</a>
+                    <a class="nav__link active" href="/">Projects</a>
+                    <a class="nav__link" href="/pages/about">About</a>
+                    <a class="nav__link" href="/pages/contact">Contact</a>
                 </div>
                 <div class="footer-container2">
-                    <a  href="/pages/achievements">Certification</a>
+                    <a  href="/pages/achievements">Credential</a>
                     <a  href="/pages/notes">Notes</a>
                     <a  href="/pages/reading">Reading</a>
                     <a  href="/pages/now">Now</a>
