fix footer navbar

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -306,15 +306,15 @@
             <!-- SHORTCUT NAV -->
             <div class="footer-container">
                 <div class="footer-card">
-                    <a class="nav__link active" href="/">Projects</a>
-                    <a class="nav__link" href="/pages/about">About</a>
-                    <a class="nav__link" href="/pages/contact">Contact</a>
+                    <a href="/" class="nav__link"><i class="ri-arrow-right-up-line"></i><span>Projects</span></a>
+                    <a class="nav__link" href="/pages/about"><i class="ri-arrow-right-up-line"></i><span>About</span></a>
+                    <a class="nav__link" href="/pages/contact"><i class="ri-arrow-right-up-line"></i><span>Contact</span></a>
                 </div>
                 <div class="footer-container2">
-                    <a  href="/pages/achievements">Credential</a>
-                    <a  href="/pages/notes">Notes</a>
-                    <a  href="/pages/reading">Reading</a>
-                    <a  href="/pages/now">Now</a>
+                    <a class="nav__link" href="/pages/achievements"><i class="ri-arrow-right-up-line"></i><span>Credential</span></a>
+                    <a  class="nav__link" href="/pages/notes"><i class="ri-arrow-right-up-line"></i><span>Notes</span></a>
+                    <a  class="nav__link active" href="/pages/reading"><i class="ri-arrow-right-up-line"></i><span>Reading</span></a>
+                    <a  class="nav__link" href="/pages/now"><i class="ri-arrow-right-up-line"></i><span>Now</span></a>
                 </div>
             </div>
 
