add more menus images and fix about page

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                               <h3>About me</h3>
                               <div>Personality & Experience</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="assets/Images/menus/1.png" alt="">
                         </div>
                     </a>
 
@@ -253,7 +253,7 @@
                               <h3>Achievements</h3>
                               <div>What I achived so far</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="assets/Images/menus/2.png" alt="">
                         </div>
                     </a>
 
@@ -263,7 +263,7 @@
                               <h3>Now</h3>
                               <div>What I'm doing now</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="assets/Images/menus/3.png" alt="">
                         </div>
                     </a>
 
@@ -273,7 +273,7 @@
                               <h3>Bookshelf</h3>
                               <div>Books I'm reading and have read</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="assets/Images/menus/4.png" alt="">
                         </div>
                     </a>
 
@@ -283,7 +283,7 @@
                               <h3>Journal</h3>
                               <div>Some thoughts, reflections, & notes</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="assets/Images/menus/5.png" alt="">
                         </div>
                     </a>
 
@@ -293,7 +293,7 @@
                               <h3>CV</h3>
                               <div>Skills that drive my passion and career</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="assets/Images/menus/6.png" alt="">
                         </div>
                     </a>
                 </div>
