--- a/pages/about.html
+++ b/pages/about.html
@@ -58,9 +58,9 @@
         <main id="about">
             <div class="about-container">
                 <div class="about-img-container">
-                    <img src="https://placehold.co/400/png" class="profile-img" alt="young person in a formal pic">
-                    <img src="https://placehold.co/400/png" class="profile-img" alt="young person in a formal pic">
-                    <img src="https://placehold.co/400/png" class="profile-img" alt="young person in a formal pic">
+                    <img src="../assets/Images/about/formal.png" class="profile-img" alt="young person in a formal pic">
+                    <img src="../assets/Images/about/grad.jpg" class="profile-img" alt="young person in a formal pic">
+                    <img src="../assets/Images/about/cam.jpg" class="profile-img" alt="young person in a formal pic">
                 </div>
 
                 <div class="about-txt-container">
@@ -91,6 +91,7 @@
                 </div>
             </div>
 
+            <!-- MORE MENUS -->
             <section class="container">
                 <div id="work" class="work-container">
                   <h2 class="work-h2">More</h2>
@@ -98,23 +99,23 @@
                 </div>  
 
                 <div class="more-grid">
+                    <a href="/pages/achievements" class="link" style="text-decoration: none;">
+                        <div class="grid-container">
+                            <div class="grid-card">
+                              <h3>Achievements</h3>
+                              <div>What I achived so far</div>
+                            </div>
+                            <img src="../assets/Images/menus/2.png" alt="">
+                        </div>
+                    </a>
+
                     <a href="/pages/now" class="link" style="text-decoration: none;">
                         <div class="grid-container">
                             <div class="grid-card">
                               <h3>Now</h3>
                               <div>What I'm doing now</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
-                        </div>
-                    </a>
-
-                    <a href="/pages/course" class="link" style="text-decoration: none;">
-                        <div class="grid-container">
-                            <div class="grid-card">
-                              <h3>Lessons</h3>
-                              <div>What I'm studying</div>
-                            </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="../assets/Images/menus/3.png" alt="">
                         </div>
                     </a>
 
@@ -124,7 +125,7 @@
                               <h3>Bookshelf</h3>
                               <div>Books I'm reading and have read</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="../assets/Images/menus/4.png" alt="">
                         </div>
                     </a>
 
@@ -134,7 +135,7 @@
                               <h3>Journal</h3>
                               <div>Some thoughts, reflections, & notes</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="../assets/Images/menus/5.png" alt="">
                         </div>
                     </a>
 
@@ -144,11 +145,11 @@
                               <h3>CV</h3>
                               <div>Skills that drive my passion and career</div>
                             </div>
-                            <img src="https://placehold.co/300x200" alt="">
+                            <img src="../assets/Images/menus/6.png" alt="">
                         </div>
                     </a>
                 </div>
-            </section>   
+            </section>    
         </main>
 
         <!-- FOOTER -->
