add new styles for posts and now pages

--- a/pages/reading.html
+++ b/pages/reading.html
@@ -299,6 +299,63 @@
                     </div>
                 </div>
             </div>
+
+            <!-- MORE MENUS -->
+            <section class="container">
+                <div id="work" class="work-container">
+                  <h2 class="work-h2">More</h2>
+                  <div class="divider"></div>
+                </div>  
+                <div class="more-grid">
+                    <a href="pages/about" class="link" style="text-decoration: none;">
+                        <div class="grid-container">
+                            <div class="grid-card">
+                              <h3>About me</h3>
+                              <div>Personality & Experience</div>
+                            </div>
+                            <img src="../assets/Images/menus/1.png" alt="">
+                        </div>
+                    </a>
+                    <a href="/pages/achievements" class="link" style="text-decoration: none;">
+                        <div class="grid-container">
+                            <div class="grid-card">
+                              <h3>Achievements</h3>
+                              <div>What I achived so far</div>
+                            </div>
+                            <img src="../assets/Images/menus/2.png" alt="">
+                        </div>
+                    </a>
+
+                    <a href="/pages/now" class="link" style="text-decoration: none;">
+                        <div class="grid-container">
+                            <div class="grid-card">
+                              <h3>Now</h3>
+                              <div>What I'm doing now</div>
+                            </div>
+                            <img src="../assets/Images/menus/3.png" alt="">
+                        </div>
+                    </a>
+                    <a href="/pages/notes" class="link" style="text-decoration: none;">
+                        <div class="grid-container">
+                            <div class="grid-card">
+                              <h3>Journal</h3>
+                              <div>Some thoughts, reflections, & notes</div>
+                            </div>
+                            <img src="../assets/Images/menus/5.png" alt="">
+                        </div>
+                    </a>
+
+                    <a href="https://read.cv/mspinkymonterde" class="link" style="text-decoration: none;">
+                        <div class="grid-container">
+                            <div class="grid-card">
+                              <h3>CV</h3>
+                              <div>Skills that drive my passion and career</div>
+                            </div>
+                            <img src="../assets/Images/menus/6.png" alt="">
+                        </div>
+                    </a>
+                </div>
+            </section>  
         </main>
 
         <!-- FOOTER -->
