--- a/pages/about.html
+++ b/pages/about.html
@@ -69,7 +69,7 @@
                         <p>I’m Pinky, an aspiring IT professional and third-year college student passionate about exploring the creative and technical realms of technology. My journey so far has been fueled by curiosity, ambition, and a drive to continuously learn and innovate.</p>
                         
                         <div class="manual-container">
-                            <a href="#" style="text-decoration: none;">
+                            <a href="/pages/posts/manual" style="text-decoration: none;">
                                 <div class="manual-link">
                                     <div class="nb">📒</div>
                                     <div class="manual-txt">
